# OpenEMPIRE

./: .gitattributes  .gitignore  .prospector.yaml  .readthedocs.yaml  EMPIRE_software_documentation.docx  Empire.py  LICENSE  README.md  agg_config.json  aggregator.py  aggregator2.py  config_run.yaml  config_testrun.yaml  environment.yml  model_runner.py  prototyping.ipynb  pyproject.toml  reader.py  run.py  scenario_config.json  scenario_random.py  test.py  test_run.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_report.md
.github/workflows/: python-lint.yml
Data handler/europe_agg_v50/: General.xlsx  Generator.xlsx  Node.xlsx  Sets.xlsx  Storage.xlsx  Transmission.xlsx  country_agg.txt
Data handler/europe_v48/: General.xlsx  Generator.xlsx  Input_Script.py  Node.xlsx  Sets.xlsx  Stochastic.xlsx  Storage.xlsx  Transmission.xlsx  reader.py
Data handler/europe_v50/: General.xlsx  Generator.xlsx  Node.xlsx  Sets.xlsx  Stochastic.xlsx  Storage.xlsx  Transmission.xlsx
Data handler/europe_v51/: General.xlsx  Generator.xlsx  Node.xlsx  Sets.xlsx  Storage.xlsx  Transmission.xlsx
Data handler/techno_friendly/: General.xlsx  Generator.xlsx  Node.xlsx  Sets.xlsx  Stochastic.xlsx  Storage.xlsx  Transmission.xlsx
Data handler/test/: General.xlsx  Generator.xlsx  Node.xlsx  Sets.xlsx  Storage.xlsx  Transmission.xlsx
Empire/: Empire.py  __init__.py  config.py  input_data_manager.py  logger.py  model_runner.py  reader.py  scenario_random.py  utils.py
Empire/input_client/: client.py  excel_structure.py  sheets_structure.py
Empire/output_client/: client.py  maps.py
app/: main.py
app/modules/: input.py  output.py  utils.py
app/pages/: input.py  output.py
config/: aggrun.yaml  alpha2.json  app.sample.yaml  cluster.sample.json  countries.json  logging.yaml  myrun.yaml  reader_config.json  run.yaml  testmyrun.yaml  testrun.yaml
docs/: EMPIRE_software_documentation.docx  requirements.txt
docs/source/: Empire.input_client.rst  Empire.rst  conf.py  (+11 more)
empire/: __init__.py  empire.py  input_data_manager.py  logger.py  reader.py  utils.py
plots/: stability_tests.ipynb
scripts/: copy_and_run_empire_on_hpc.sh  copy_empire_to_remote.sh  generate_scenarios.py  no_onshore_wind_norway.py  norway_analysis.py  norway_analysis_sge.sh  norway_analysis_sge_worker.sh  run.py  run_analysis.py  run_analysis_sge.sh  run_analysis_sge_worker.sh  run_analysis_slurm.sh  test_run.py
(+104 files in other folders)
